updates for cfp

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2021-12-29 Wed 21:22 -->
+<!-- 2022-01-07 Fri 14:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Public Notes</title>
@@ -221,13 +221,13 @@
 <h1 class="title">Public Notes</h1>
 <ul class="org-ul">
 <li><a href="cfp.html">Call for Papers (CFPs)</a></li>
+<li><a href="link_farm.html">Link Farm</a></li>
 <li><a href="pub-done.html">Published Papers</a></li>
-<li><a href="link_farm.html">link<sub>farm</sub></a></li>
 </ul>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Harshvardhan J. Pandit</p>
-<p class="date">Created: 2021-12-29 Wed 21:22</p>
+<p class="date">Created: 2022-01-07 Fri 14:49</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4)</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
