--- a/cfp.html
+++ b/cfp.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-02 Wed 09:30 -->
+<!-- 2022-02-02 Wed 09:34 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Call for Papers (CFPs)</title>
@@ -551,7 +551,13 @@
 <tbody>
 <tr>
 <td class="org-left">APF 2022</td>
-<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2022-02-04 Fri]</span></span></td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2022-02-21 Mon]</span></span></td>
+</tr>
+</tbody>
+<tbody>
+<tr>
+<td class="org-left">IWPE 2022</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2022-03-04 Fri]</span></span></td>
 </tr>
 </tbody>
 <tbody>
@@ -3656,7 +3662,7 @@ editors:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Harshvardhan J. Pandit</p>
-<p class="date">Created: 2022-02-02 Wed 09:30</p>
+<p class="date">Created: 2022-02-02 Wed 09:34</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.4)</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
